manifests/03-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"pyrra:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pyrra\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: pyrra
  labels:
    app: pyrra
    app.kubernetes.io/component: pyrra
    app.kubernetes.io/instance: pyrra
    app.kubernetes.io/part-of: pyrra-app
    app.openshift.io/runtime-namespace: pyrra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyrra
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pyrra
        deploymentconfig: pyrra
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: pyrra
          args:
          - api
          - --prometheus-url=https://prometheus-k8s-openshift-monitoring.apps.vrutkovs-aws48.devcluster.openshift.com/
          - --prometheus-bearer-token-path=/var/run/secrets/kubernetes.io/serviceaccount/token
          - --api-url=http://pyrra-k8s.pyrra.svc.cluster.local:9444
          image: 'pyrra:latest'
          ports:
            - containerPort: 9099
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
