manifests/04-pyrra-k8s-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"pyrra:latest","namespace":"pyrra"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pyrra-k8s\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: pyrra-k8s
  namespace: pyrra
  labels:
    app: pyrra-k8s
    app.kubernetes.io/component: pyrra-k8s
    app.kubernetes.io/instance: pyrra-k8s
    app.kubernetes.io/part-of: pyrra-app
    app.openshift.io/runtime-namespace: pyrra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyrra-k8s
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pyrra-k8s
        deploymentconfig: pyrra-k8s
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: pyrra-k8s
          args:
          - kubernetes
          - --namespace=$(NAMESPACE)
          image: 'pyrra:latest'
          ports:
            - containerPort: 9444
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
