manifests/06-pyrra-k8s-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: pyrra-k8s
  labels:
    app: pyrra-k8s
    app.kubernetes.io/component: pyrra-k8s
    app.kubernetes.io/instance: pyrra-k8s
    app.kubernetes.io/part-of: pyrra-app
spec:
  ports:
    - name: 9444-tcp
      protocol: TCP
      port: 9444
      targetPort: 9444
  selector:
    app: pyrra-k8s
    deploymentconfig: pyrra-k8s
  type: ClusterIP
  sessionAffinity: None
