manifests/07-pyrra-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pyrra
  namespace: pyrra
  labels:
    app: pyrra
    app.kubernetes.io/component: pyrra
    app.kubernetes.io/instance: pyrra
    app.kubernetes.io/part-of: pyrra-app
    app.openshift.io/runtime-version: latest
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: pyrra
    weight: 100
  port:
    targetPort: 9099-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
