manifests/08-pyrra-k8s-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pyrra-k8s
  labels:
    app: pyrra-k8s
    app.kubernetes.io/component: pyrra-k8s
    app.kubernetes.io/instance: pyrra-k8s
    app.kubernetes.io/part-of: pyrra-app
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: pyrra-k8s
    weight: 100
  port:
    targetPort: 9444-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
